--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,20 @@ addons:
     packages:
       - python-pygments
 
-# Clean and don't fail
-install:
-  - rm -rf public || exit 0
+        # Clean and don't fail
+    install:
+      - rm -rf public || exit 0
 
-# Build the website
-script:
-  - bin/hugo 
+        # Build the website
+    script:
+      - bin/hugo
 
-# Deploy to GitHub pages
-deploy:
-  provider: pages
-  skip_cleanup: true
-  local_dir: public
-  github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
-  on:
-    branch: gh-pages 
+        # Deploy to GitHub pages
+    deploy:
+      provider: pages
+      skip_cleanup: true
+      local_dir: public
+      github_token: $GITHUB_TOKEN # Set in travis-ci.org dashboard
+      repo: opentechinstitute/opentechinstitute.github.io
+      on:
+        branch: master
