--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ language: go
 go:
   - master # This uses automatically the latest version of go
 
-install:
-  - go get github.com/spf13/hugo # This provides the latest version of Hugo to Travis CI
+#install:
+#  - go get github.com/spf13/hugo # This provides the latest version of Hugo to Travis CI
 
 script:
-  - hugo
+  - bin/hugo
 
     # Deploy to GitHub pages
 deploy:
