--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@
 
 #go:
 #  - master # This uses automatically the latest version of go
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq hugo
+#before_install:
+#  - sudo apt-get update -qq
+#  - sudo apt-get install -qq hugo
 
 #install:
 #  - apt install hugo
 #  - go get github.com/spf13/hugo # This provides the latest version of Hugo to Travis CI
 
 script:
-  - hugo
+  - bin/hugo
 
     # Deploy to GitHub pages
 deploy:
